--- a/ShopMobileApp/ShopMobileApp.Android/ShopMobileApp.Android.csproj
+++ b/ShopMobileApp/ShopMobileApp.Android/ShopMobileApp.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CarouselView.FormsPlugin">
+      <Version>6.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
@@ -93,7 +96,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\WIPP.png" />
+    <AndroidAsset Include="Resources\WIPP.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Resources\WIP.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
