--- a/ShopMobileApp/ShopMobileApp.Android/ShopMobileApp.Android.csproj
+++ b/ShopMobileApp/ShopMobileApp.Android/ShopMobileApp.Android.csproj
@@ -86,9 +86,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\ShopMobileApp\ShopMobileApp.csproj">
       <Project>{4D6C8A13-690B-40EE-84BC-49F9CD426344}</Project>
@@ -96,10 +94,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Resources\WIPP.png" />
+    <AndroidResource Include="Resources\drawable\WIPP.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Resources\WIP.png" />
+    <AndroidResource Include="Resources\drawable\WIP.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
