--- a/ShopMobileApp/ShopMobileApp.Android/ShopMobileApp.Android.csproj
+++ b/ShopMobileApp/ShopMobileApp.Android/ShopMobileApp.Android.csproj
@@ -197,5 +197,20 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Engine2JZSwap.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Taxi.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Mechanic.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\CarPartsCar.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\CarRental.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\MagnGlassIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
