--- a/ShopMobileApp/ShopMobileApp/ShopMobileApp.csproj
+++ b/ShopMobileApp/ShopMobileApp/ShopMobileApp.csproj
@@ -17,16 +17,25 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\AllItemsPage.xaml.cs">
+      <DependentUpon>AllItemsPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="AppShell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\CollectionsPage.xaml">
+    <EmbeddedResource Update="Views\AllItemsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\ExplorePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\ItemPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ItemView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\MainPage.xaml">
