--- a/ShopMobileApp/ShopMobileApp.Android/ShopMobileApp.Android.csproj
+++ b/ShopMobileApp/ShopMobileApp.Android/ShopMobileApp.Android.csproj
@@ -223,5 +223,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\MagnGlassIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\UnavailibleIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
